# bevy_test-animation

./: Cargo.toml  README.md
assets/: test-1key.glb  test-2keys.glb  test-keyless.glb
blender/: 1key.blend  2keys.blend  keyless.blend
src/: main.rs
